# assignment-dstr

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  FeedbackDatabase.csv  README.md  UserFeedback.cpp  main.cpp  test.cpp  watcher.ps1
Controllers/: FeedbackController.cpp  UniversityController.cpp
Database/: FavUni.csv  Favourites.csv  FeedbackDatabase.csv  Universities.csv  Users.csv
Models/: University.cpp  UserFeedback.cpp
Modules/: Algorithms.cpp  Conversions.cpp  InputHandler.cpp  Sorters.cpp
Views/: ViewFeedback.cpp  ViewLoginMenu.cpp  ViewMainMenu.cpp
src/: CMakeLists.txt  main.cpp
src/controllers/: CMakeLists.txt  FavouritesController.cpp  FeedbackController.cpp  MemberController.cpp  UniversityController.cpp
src/models/: CMakeLists.txt  Favourites.cpp  Feedback.cpp  Member.cpp  TopUni.cpp  University.cpp
src/modules/: Algorithms.cpp  CMakeLists.txt  Conversions.cpp  InputHandler.cpp
src/views/: AdminDashboard.cpp  CMakeLists.txt  UserDashboard.cpp  ViewFeedback.cpp  ViewLoginMenu.cpp  ViewMainMenu.cpp  ViewRegisterMenu.cpp
